objects/Componente__c.object
<CustomObject>
    <description>Objeto para almacenar los componentes por User Stories</description>
    <fields>
        <fullName>Historia_de_Usuario__c</fullName>
        <label>Historia de Usuario</label>
        <referenceTo>Historias_de_Usuario__c</referenceTo>
        <relationshipLabel>Componentes</relationshipLabel>
        <relationshipName>Componentes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Componente</label>
    <nameField>
        <label>Componente Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Componentes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>